Fixed styling issue for Search Sidebar on mobile

--- a/src/components/SearchSidebar/SearchSidebar.module.css
+++ b/src/components/SearchSidebar/SearchSidebar.module.css
@@ -29,7 +29,10 @@
 
 .search {
   display: flex;
-  gap: 1rem;
+}
+
+.search > * {
+  margin: 1rem;
 }
 
 @media only screen and (max-width: 1350px) {
